[gd_scene load_steps=4 format=3 uid="uid://c2mtw6kv1v7w6"]

[ext_resource type="Script" path="res://scripts/ui/map_list_screen.gd" id="1_p48fv"]
[ext_resource type="FontFile" uid="uid://dvjpeiguvrck1" path="res://BLACKCASTLEMF.TTF" id="2_5nyf0"]
[ext_resource type="Texture2D" uid="uid://b8gmlbt12iott" path="res://Images/Italian_landscape_AI.jpg" id="3_xy4p1"]

[node name="MapListScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_p48fv")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 40.0
offset_bottom = 113.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0.219608, 0.168627, 0.101961, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_5nyf0")
theme_override_font_sizes/font_size = 64
text = "Condottieri Map Editor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MapThumbnailPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.625
anchor_top = 0.25
anchor_right = 0.825
anchor_bottom = 0.606
offset_bottom = -0.320007
grow_horizontal = 0
grow_vertical = 2

[node name="MapThumbnail" type="TextureRect" parent="MapThumbnailPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="MapListContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.555
anchor_top = 0.625
anchor_right = 0.892
anchor_bottom = 0.919
offset_left = -0.400024
offset_right = 0.23999
offset_bottom = 0.320007
metadata/_edit_use_anchors_ = true

[node name="MapListPanel" type="VBoxContainer" parent="MapListContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 91.0
offset_top = 90.0
offset_right = 456.0
offset_bottom = 248.0
grow_vertical = 2

[node name="CreateMapButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_5nyf0")
theme_override_font_sizes/font_size = 24
text = "Create Map"

[node name="DeleteMapButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5nyf0")
theme_override_font_sizes/font_size = 24
text = "Delete Map"

[node name="OpenMapButton" type="Button" parent="ButtonContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5nyf0")
theme_override_font_sizes/font_size = 24
text = "Open Map"

[node name="Background" type="TextureRect" parent="."]
z_index = -1
layout_mode = 0
offset_left = 2.0
offset_top = -425.0
offset_right = 1298.0
offset_bottom = 871.0
mouse_filter = 2
texture = ExtResource("3_xy4p1")
expand_mode = 1

[connection signal="pressed" from="ButtonContainer/CreateMapButton" to="." method="_on_create_map_button_pressed"]
